[FIX]: Fix alignment in kanban view. add accessrights for event.items.
bzr revid: atp@tinyerp.com-20120509114210-r3tp1nnn5rvoipqy

--- a/addons/event/static/src/css/event.css
+++ b/addons/event/static/src/css/event.css
@@ -37,7 +37,7 @@ div.oe_fold_column{
     border: 1px solid #ababab;
     color: #404040;
     font-size: 12px;
-    padding: 3px 10px;
+    padding: 0px !important;
     text-align: center;
     -o-background-size: 100% 100%;
     -moz-background-size: 100% 100%;
@@ -117,7 +117,7 @@ div.oe_fold_column{
    background-color: #DC5F59;
  }
  .no_of_seats{
-    width:25px;    
+    width:35px;    
  }
 .oe_event_title{
   font-size: 25px;
